# shadcn-boilerplate

./: .cursorrules  .editorconfig  .gitignore  .mcp.json  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.backend.yaml  docker-compose.frontend.yaml  project.code-workspace
.agent/: AGENT.md
.agent/rules/: architecture.md  auto-generated.md  clean-code.md  code-style.md  command-guidelines.md  date-time-handling.md  development-commands.md  environment.md  i18n.md  index.md  package-management.md  research-first.md  special-notes.md  supabase-config.md  testing.md  ui-implementation.md  ui-testing.md
.claude/: CLAUDE.md  settings.json
.claude/hooks/: format-backend-py.sh  format-deno.sh  format-frontend.sh  quality-check.sh
.claude/rules/: auto-generated.md  backend-py.md  clean-code.md  commands.md  database.md  datetime.md  edge-functions.md  frontend.md  i18n.md  research.md  supabase-first.md  tdd.md  (+1 more)
.codex/: AGENTS.md  config.toml.example
.github/: dependabot.yml
.maestro/: config.yaml
atlas/: README.md  atlas.hcl
backend-py/: AGENTS.md  README.md
backend-py/app/: .clinerules  pyproject.toml
backend-py/app/.cursor/rules/: backend-coding.mdc
backend-py/app/src/: app.py
backend-py/app/src/controller/: __init__.py  base_controller.py  llm_controller.py  virtual_user_chat_controller.py
backend-py/app/src/domain/: exceptions.py
backend-py/app/src/domain/const/: error_messages.py
backend-py/app/src/domain/entity/: chat.py  models.py
backend-py/app/src/domain/service/: rag_service.py
backend-py/app/src/gateway/: agent_gateway.py  chat_room_gateway.py  cron_gateway.py  current_user_gateway.py  embeddings_gateway.py  llm_gateway.py  message_gateway.py  openai_gateway.py  storage_gateway.py  user_profile_gateway.py  vectorstore_gateway.py  virtual_user_gateway.py
backend-py/app/src/gateway/const/: default_template.py
backend-py/app/src/infra/: agent.py  db_client.py  logging.py  supabase_client.py
backend-py/app/src/infra/llm/: llm_factory.py  memory.py  vectorstore.py
backend-py/app/src/middleware/: auth_middleware.py  logging_middleware.py
backend-py/app/src/usecase/: chat_usecase.py  virtual_user_chat_usecase.py
backend-py/app/src/util/: __init__.py
backend-py/app/tests/: test_health.py  test_logging.py  test_logging_middleware.py
docs/: AI_Native_SaaS_Design_Pattern.md  codex-setup.md
drizzle/: AGENTS.md  README.md  drizzle.config.ts  migrate.ts  package.json  tsconfig.json
env/: secrets.env.example
frontend/: .cursorrules  .dockerignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  biome.json  components.json  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
prisma/: schema.prisma
supabase/: .gitignore
tasks/: _template.md
(+525 files in other folders)
